--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
         android:layout_height="wrap_content"
         android:text="@string/today"
         android:fontFamily="serif"
-        android:textSize="20dp"
-        android:textColor="Color.BLACK"
+        android:textSize="20sp"
+        android:textColor="#000000"
         android:padding="@dimen/activity_horizontal_margin"/>
 
     <TextView
@@ -29,4 +29,17 @@
         android:layout_below="@+id/today_text"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:src="@drawable/ic_add_medic"
+        android:clickable="true"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="6
+       dp"
+        android:layout_marginBottom="15dp">    </android.support.design.widget.FloatingActionButton>
+
 </RelativeLayout>
