--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
     <android.support.design.widget.FloatingActionButton
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:background="#ff0000"
         android:src="@drawable/ic_add_medic"
         android:clickable="true"
         android:padding="@dimen/activity_horizontal_margin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="6
-       dp"
+        android:layout_marginEnd="6dp"
         android:layout_marginBottom="15dp">    </android.support.design.widget.FloatingActionButton>
 
 </RelativeLayout>
