--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:layout_marginTop="20dp" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/new_drug_button"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:background="#ff0000"
