--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:id="@+id/new_drug_button"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:src="@drawable/ic_add_medic"
+        android:src="@drawable/ic_add"
         android:clickable="true"
         android:padding="@dimen/activity_horizontal_margin"
         android:layout_alignParentBottom="true"
