--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#d50000</color>
     <color name="blackFonce">#212121</color>
+    <color name="materialGrey">#bdbdbd</color>
 </resources>
