--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,11 +36,11 @@
         android:layout_width="wrap_content"
         android:src="@drawable/ic_add"
         android:clickable="true"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="15dp"
-        app:backgroundTint="#ffffff">    </android.support.design.widget.FloatingActionButton>
+        app:fabSize="normal"
+        app:backgroundTint="#ffffff"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true">    </android.support.design.widget.FloatingActionButton>
 
 </RelativeLayout>
