--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#bdbdbd</color>
+    <color name="colorPrimaryDark">#212121</color>
     <color name="colorAccent">#d50000</color>
     <color name="blackFonce">#212121</color>
-    <color name="materialGrey">#cfd8dc</color>
+    <color name="materialGrey">#263238</color>
 </resources>
