--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,6 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="fr.florentphilippe.lay.MainActivity">
 
     <TextView
@@ -38,8 +34,7 @@
         android:clickable="true"
         app:fabSize="normal"
         app:backgroundTint="#ffffff"
-        android:layout_marginBottom="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_margin="15dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true">    </android.support.design.widget.FloatingActionButton>
 
