--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,15 @@
         android:textColor="#000000"
         android:padding="@dimen/activity_horizontal_margin"/>
 
-    <TextView
-        android:id="@+id/nothing_to_show_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/show_nothing"
-        android:layout_below="@+id/today_text"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+    <!-- Content container -->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/main_recycler"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp">
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/new_drug_button"
