--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,17 @@
     tools:context="fr.florentphilippe.lay.MainActivity">
 
     <TextView
-        android:id="@+id/today_text"
+        android:id="@+id/text_nothing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/today"
+        android:text="@string/nothing"
         android:fontFamily="serif"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textColor="#000000"
-        android:padding="@dimen/activity_horizontal_margin"/>
+        android:padding="@dimen/activity_horizontal_margin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        />
 
     <!-- Content container -->
     <android.support.v7.widget.RecyclerView
